force-app/main/default/objects/ssot__CoverageBenefit__dlm/fields/ssot__FinalCoverageStatusCodeId__c.field-meta.xml
<CustomField>
    <fullName>ssot__FinalCoverageStatusCodeId__c</fullName>
    <label>Final Coverage Status Code</label>
    <length>15</length>
    <mktDataModelFieldAttributes>
        <definitionCreationType>Standard</definitionCreationType>
        <isDynamicLookup>false</isDynamicLookup>
        <refAttrDeveloperName>FinalCoverageStatusCodeId</refAttrDeveloperName>
        <usageTag>None</usageTag>
    </mktDataModelFieldAttributes>
    <type>Text</type>
</CustomField>