force-app/main/default/objects/ssot__CoverageBenefit__dlm/fields/ssot__OutcomeStatusCodeId__c.field-meta.xml
<CustomField>
    <fullName>ssot__OutcomeStatusCodeId__c</fullName>
    <label>Outcome Status Code</label>
    <length>15</length>
    <mktDataModelFieldAttributes>
        <definitionCreationType>Standard</definitionCreationType>
        <isDynamicLookup>false</isDynamicLookup>
        <refAttrDeveloperName>OutcomeStatusCodeId</refAttrDeveloperName>
        <usageTag>None</usageTag>
    </mktDataModelFieldAttributes>
    <type>Text</type>
</CustomField>