force-app/main/default/objects/ssot__CoverageBenefit__dlm/fields/ssot__rel_1723779545974_end__c.field-meta.xml
<CustomField>
    <fullName>ssot__rel_1723779545974_end__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>CoverageBenefit_StatusCodeId_map_Cod_rel</label>
    <referenceTo>ssot__CodeSet__dlm</referenceTo>
    <relationshipLabel>CoverageBenefit_StatusCodeId_map_Cod_rel</relationshipLabel>
    <relationshipName>rel_1723779545974_end</relationshipName>
    <type>Lookup</type>
</CustomField>