force-app/main/default/objects/ssot__CoverageBenefit__dlm/fields/ssot__StatusCodeId__c.field-meta.xml
<CustomField>
    <fullName>ssot__StatusCodeId__c</fullName>
    <label>Status Code</label>
    <length>15</length>
    <mktDataModelFieldAttributes>
        <definitionCreationType>Standard</definitionCreationType>
        <isDynamicLookup>false</isDynamicLookup>
        <refAttrDeveloperName>StatusCodeId</refAttrDeveloperName>
        <usageTag>None</usageTag>
    </mktDataModelFieldAttributes>
    <type>Text</type>
</CustomField>